✨ feat(commit-message): add custom support for commit message generation
- Introduce a new support prompt for generating commit messages
- Enhance commit message customization in various languages
- Allow setting API configuration for commit message generation in settings

♻️ refactor(commit-message): optimize commit message provider logic

- Refactor prompt building logic for commit message generation
- Remove unnecessary initialization call in generateCommitMessage method

🌐 i18n(prompts): add translations for commit message generation

- Update language files to include commit message generation labels and descriptions

--- a/webview-ui/src/i18n/locales/ca/prompts.json
+++ b/webview-ui/src/i18n/locales/ca/prompts.json
@@ -103,6 +103,10 @@
 			"NEW_TASK": {
 				"label": "Iniciar nova tasca",
 				"description": "Inicieu una nova tasca amb l'entrada proporcionada. Disponible a la paleta de comandes."
+			},
+			"COMMIT_MESSAGE": {
+				"label": "Generació de Missatges de Commit",
+				"description": "Genera missatges de commit basats en els teus canvis posats a l'àrea de preparació de git. Personalitza el prompt per crear missatges de commit consistents que segueixin les millors pràctiques del teu equip."
 			}
 		}
 	},
