--- a/webview-ui/src/i18n/locales/en/prompts.json
+++ b/webview-ui/src/i18n/locales/en/prompts.json
@@ -103,6 +103,10 @@
 			"NEW_TASK": {
 				"label": "Start New Task",
 				"description": "Start a new task with user input. Available in the Command Palette."
+			},
+			"COMMIT_MESSAGE": {
+				"label": "Commit Message Generation",
+				"description": "Generate commit messages based on your staged git changes. Customize the prompt to create consistent commit messages that follow your team's best practices."
 			}
 		}
 	},
