--- a/webview-ui/src/i18n/locales/es/prompts.json
+++ b/webview-ui/src/i18n/locales/es/prompts.json
@@ -103,6 +103,10 @@
 			"NEW_TASK": {
 				"label": "Iniciar nueva tarea",
 				"description": "Inicia una nueva tarea con entrada del usuario. Disponible en la Paleta de comandos."
+			},
+			"COMMIT_MESSAGE": {
+				"label": "Generación de Mensajes de Commit",
+				"description": "Genera mensajes de commit basados en tus cambios git en stage. Personaliza el prompt para crear mensajes de commit consistentes que sigan las mejores prácticas de tu equipo."
 			}
 		}
 	},
