--- a/webview-ui/src/i18n/locales/hi/prompts.json
+++ b/webview-ui/src/i18n/locales/hi/prompts.json
@@ -103,6 +103,10 @@
 			"NEW_TASK": {
 				"label": "नया कार्य शुरू करें",
 				"description": "इनपुट के साथ नया कार्य शुरू करें। कमांड पैलेट में उपलब्ध है।"
+			},
+			"COMMIT_MESSAGE": {
+				"label": "कमिट मैसेज जेनरेशन",
+				"description": "अपने स्टेज्ड गिट परिवर्तनों के आधार पर कमिट संदेश उत्पन्न करें। अपनी टीम के सर्वोत्तम प्रथाओं का पालन करने वाले सुसंगत कमिट संदेशों को बनाने के लिए प्रॉम्प्ट को अनुकूलित करें।"
 			}
 		}
 	},
