--- a/webview-ui/src/i18n/locales/ja/prompts.json
+++ b/webview-ui/src/i18n/locales/ja/prompts.json
@@ -103,6 +103,10 @@
 			"NEW_TASK": {
 				"label": "新しいタスクを開始",
 				"description": "入力内容で新しいタスクを開始できます。コマンドパレットから利用できます。"
+			},
+			"COMMIT_MESSAGE": {
+				"label": "コミットメッセージ生成",
+				"description": "ステージングされたGitの変更に基づいてコミットメッセージを生成します。チームのベストプラクティスに従った一貫性のあるコミットメッセージを作成するためにプロンプトをカスタマイズできます。"
 			}
 		}
 	},
