--- a/webview-ui/src/i18n/locales/ru/prompts.json
+++ b/webview-ui/src/i18n/locales/ru/prompts.json
@@ -103,6 +103,10 @@
 			"NEW_TASK": {
 				"label": "Начать новую задачу",
 				"description": "Начать новую задачу с пользовательским вводом. Доступно в палитре команд."
+			},
+			"COMMIT_MESSAGE": {
+				"label": "Генерация Сообщений Коммита",
+				"description": "Генерируйте сообщения коммитов на основе ваших подготовленных изменений git. Настраивайте промпт для создания единообразных сообщений коммитов, соответствующих лучшим практикам вашей команды."
 			}
 		}
 	},
