--- a/webview-ui/src/i18n/locales/zh-CN/prompts.json
+++ b/webview-ui/src/i18n/locales/zh-CN/prompts.json
@@ -103,6 +103,10 @@
 			"NEW_TASK": {
 				"label": "新任务",
 				"description": "控制开始新任务时的用户提示词。可在首页对话框中使用。"
+			},
+			"COMMIT_MESSAGE": {
+				"label": "提交信息生成",
+				"description": "根据您的暂存区git更改生成提交消息。自定义提示以创建符合团队最佳实践的一致性提交消息。"
 			}
 		}
 	},
