--- a/webview-ui/src/i18n/locales/vi/prompts.json
+++ b/webview-ui/src/i18n/locales/vi/prompts.json
@@ -103,6 +103,10 @@
 			"NEW_TASK": {
 				"label": "Bắt đầu tác vụ mới",
 				"description": "Bắt đầu tác vụ mới với nội dung đã nhập. Có sẵn trong bảng lệnh."
+			},
+			"COMMIT_MESSAGE": {
+				"label": "Tạo Thông Điệp Commit",
+				"description": "Tạo ra các thông điệp commit dựa trên những thay đổi git đã được staged. Tùy chỉnh prompt để tạo ra các thông điệp commit nhất quán, tuân theo những phương pháp tốt nhất của đội bạn."
 			}
 		}
 	},
