--- a/webview-ui/src/i18n/locales/ja/prompts.json
+++ b/webview-ui/src/i18n/locales/ja/prompts.json
@@ -106,7 +106,7 @@
 			},
 			"COMMIT_MESSAGE": {
 				"label": "コミットメッセージ生成",
-				"description": "ステージングされたGitの変更に基づいてコミットメッセージを生成します。チームのベストプラクティスに従った一貫性のあるコミットメッセージを作成するためにプロンプトをカスタマイズできます。"
+				"description": "ステージングされた git の変更に基づいて説明的なコミットメッセージを生成します。リポジトリのベストプラクティスに沿ったメッセージを生成するようにプロンプトをカスタマイズできます。"
 			}
 		}
 	},
