--- a/webview-ui/src/i18n/locales/ru/prompts.json
+++ b/webview-ui/src/i18n/locales/ru/prompts.json
@@ -106,7 +106,7 @@
 			},
 			"COMMIT_MESSAGE": {
 				"label": "Генерация Сообщений Коммита",
-				"description": "Генерируйте сообщения коммитов на основе ваших подготовленных изменений git. Настраивайте промпт для создания единообразных сообщений коммитов, соответствующих лучшим практикам вашей команды."
+				"description": "Создавайте подробные сообщения коммитов на основе подготовленных изменений в git. Настройте запрос для генерации сообщений, соответствующих лучшим практикам вашего репозитория."
 			}
 		}
 	},
