--- a/webview-ui/src/i18n/locales/hi/prompts.json
+++ b/webview-ui/src/i18n/locales/hi/prompts.json
@@ -106,7 +106,7 @@
 			},
 			"COMMIT_MESSAGE": {
 				"label": "कमिट मैसेज जेनरेशन",
-				"description": "अपने स्टेज्ड गिट परिवर्तनों के आधार पर कमिट संदेश उत्पन्न करें। अपनी टीम के सर्वोत्तम प्रथाओं का पालन करने वाले सुसंगत कमिट संदेशों को बनाने के लिए प्रॉम्प्ट को अनुकूलित करें।"
+				"description": "अपने स्टेज किए गए गिट परिवर्तनों के आधार पर वर्णनात्मक कमिट संदेश जनरेट करें। अपने रिपॉजिटरी के सर्वोत्तम अभ्यासों का पालन करने वाले संदेश जनरेट करने के लिए प्रॉम्प्ट को अनुकूलित करें।"
 			}
 		}
 	},
