--- a/webview-ui/src/i18n/locales/it/prompts.json
+++ b/webview-ui/src/i18n/locales/it/prompts.json
@@ -106,7 +106,7 @@
 			},
 			"COMMIT_MESSAGE": {
 				"label": "Generazione di Messaggi di Commit",
-				"description": "Genera messaggi di commit basati sulle tue modifiche git in stato di staging. Personalizza il prompt per creare messaggi di commit consistenti che seguano le migliori pratiche del tuo team."
+				"description": "Genera messaggi di commit descrittivi basati sulle tue modifiche git in stage. Personalizza il prompt per generare messaggi che seguano le migliori pratiche del tuo repository."
 			}
 		}
 	},
