--- a/webview-ui/src/i18n/locales/ko/prompts.json
+++ b/webview-ui/src/i18n/locales/ko/prompts.json
@@ -106,7 +106,7 @@
 			},
 			"COMMIT_MESSAGE": {
 				"label": "커밋 메시지 생성",
-				"description": "스테이징된 git 변경 사항을 기반으로 커밋 메시지를 생성하세요. 팀의 모범 사례를 따르는 일관된 커밋 메시지를 만들기 위해 프롬프트를 커스터마이즈하세요."
+				"description": "스테이지된 git 변경 사항을 기반으로 설명이 포함된 커밋 메시지를 생성합니다. 프롬프트를 사용자 정의하여 저장소의 모범 사례를 따르는 메시지를 생성하세요."
 			}
 		}
 	},
