--- a/webview-ui/src/i18n/locales/pl/prompts.json
+++ b/webview-ui/src/i18n/locales/pl/prompts.json
@@ -106,7 +106,7 @@
 			},
 			"COMMIT_MESSAGE": {
 				"label": "Generowanie Komunikatów Zatwierdzania",
-				"description": "Generuj komunikaty commitów na podstawie zmian zaplanowanych w git. Dostosuj podpowiedź, aby tworzyć spójne komunikaty commitów, które są zgodne z najlepszymi praktykami twojego zespołu."
+				"description": "Generuj opisowe komunikaty commita na podstawie zaplanowanych zmian w git. Dostosuj zapytanie, aby generować komunikaty zgodne z najlepszymi praktykami Twojego repozytorium."
 			}
 		}
 	},
