--- a/webview-ui/src/i18n/locales/zh-CN/prompts.json
+++ b/webview-ui/src/i18n/locales/zh-CN/prompts.json
@@ -106,7 +106,7 @@
 			},
 			"COMMIT_MESSAGE": {
 				"label": "提交信息生成",
-				"description": "根据您的暂存区git更改生成提交消息。自定义提示以创建符合团队最佳实践的一致性提交消息。"
+				"description": "根据您的已暂存git更改生成描述性提交信息。定制提示以生成符合您仓库最佳实践的提交信息。"
 			}
 		}
 	},
