--- a/webview-ui/src/i18n/locales/zh-TW/prompts.json
+++ b/webview-ui/src/i18n/locales/zh-TW/prompts.json
@@ -106,7 +106,7 @@
 			},
 			"COMMIT_MESSAGE": {
 				"label": "提交信息生成",
-				"description": "根据您的暂存 Git 更改生成提交信息。自定义提示以创建符合团队最佳实践的一致性提交信息。"
+				"description": "根据您已暂存的git变更生成描述性的提交信息。自定义提示以生成遵循您仓库最佳实践的信息。"
 			}
 		}
 	},
