feat(ui): Add task timeline visualization
Introduces a visual timeline in the task header to display the history of messages within a task. Each message is represented by a colored bar whose width and height are dynamically calculated based on the message's duration and content length.

The timeline allows users to quickly see the flow of a task, identify different message types by color, and click on a bar to scroll the chat view to the corresponding message.

Includes:
- New `TaskTimeline` and `TaskTimelineMessage` components.
- Logic for processing and filtering messages for the timeline.
- Dynamic sizing calculation for timeline bars based on message content and timing.
- Integration into `TaskHeader` and `ChatView`.
- New setting to toggle the visibility of the task timeline.
- Localization strings for the new feature and settings.
- Custom CSS for timeline styling and animations.
- Unit tests for dynamic sizing logic.

--- a/webview-ui/src/i18n/locales/ca/kilocode.json
+++ b/webview-ui/src/i18n/locales/ca/kilocode.json
@@ -75,5 +75,28 @@
 			"newWorkflowFile": "Nou fitxer de flux de treball...",
 			"newRuleFile": "Nou fitxer de regla..."
 		}
+	},
+	"taskTimeline": {
+		"tooltip": {
+			"messageTypes": {
+				"browser_action_launch": "iniciar navegador",
+				"browser_action": "acció del navegador",
+				"browser_action_result": "resultat de l'acció del navegador",
+				"checkpoint_saved": "punt de control desat",
+				"condense_context": "condensar context",
+				"command_output": "sortida de comanda",
+				"completion_result": "resultat de la compleció",
+				"command": "execució de comandes",
+				"error": "missatge d'error",
+				"followup": "pregunta de seguiment",
+				"mcp_server_response": "Resposta del servidor MCP",
+				"text": "Resposta de la IA",
+				"reasoning": "Raonament d'IA",
+				"unknown": "tipus de missatge desconegut",
+				"tool": "ús de l'eina",
+				"use_mcp_server": "Ús del servidor MCP"
+			},
+			"clickToScroll": "Veure {{messageType}} (núm. {{messageNumber}})"
+		}
 	}
 }
