--- a/webview-ui/src/i18n/locales/es/kilocode.json
+++ b/webview-ui/src/i18n/locales/es/kilocode.json
@@ -75,5 +75,28 @@
 			"newWorkflowFile": "Nuevo archivo de flujo de trabajo...",
 			"newRuleFile": "Nuevo archivo de regla..."
 		}
+	},
+	"taskTimeline": {
+		"tooltip": {
+			"clickToScroll": "Ver {{messageType}} (#{{messageNumber}})",
+			"messageTypes": {
+				"browser_action_launch": "lanzamiento del navegador",
+				"browser_action": "acción del navegador",
+				"checkpoint_saved": "punto de control guardado",
+				"command_output": "salida del comando",
+				"browser_action_result": "resultado de la acción del navegador",
+				"command": "ejecución de comandos",
+				"condense_context": "condensar contexto",
+				"mcp_server_response": "Respuesta del servidor MCP",
+				"completion_result": "resultado de completado",
+				"followup": "pregunta de seguimiento",
+				"reasoning": "Razonamiento de IA",
+				"tool": "uso de herramientas",
+				"text": "Respuesta de IA",
+				"error": "mensaje de error",
+				"unknown": "tipo de mensaje desconocido",
+				"use_mcp_server": "Uso del servidor MCP"
+			}
+		}
 	}
 }
