--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -610,5 +610,11 @@
 	"labels": {
 		"customArn": "사용자 지정 ARN",
 		"useCustomArn": "사용자 지정 ARN 사용..."
+	},
+	"display": {
+		"taskTimeline": {
+			"label": "작업 타임라인 표시",
+			"description": "작업 메시지의 시각적 타임라인을 유형별로 색상화하여 표시하므로, 작업 진행 상황을 빠르게 확인하고 작업 기록의 특정 지점으로 스크롤하여 돌아갈 수 있습니다."
+		}
 	}
 }
