--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -610,5 +610,11 @@
 	"labels": {
 		"customArn": "Пользовательский ARN",
 		"useCustomArn": "Использовать пользовательский ARN..."
+	},
+	"display": {
+		"taskTimeline": {
+			"label": "Показать временную шкалу задачи",
+			"description": "Отображение визуальной временной шкалы сообщений задачи с цветовым разделением по типам, позволяющее быстро просматривать прогресс выполнения и перематывать к определенным моментам в истории задачи."
+		}
 	}
 }
