--- a/webview-ui/src/i18n/locales/zh-TW/kilocode.json
+++ b/webview-ui/src/i18n/locales/zh-TW/kilocode.json
@@ -75,5 +75,28 @@
 			"newWorkflowFile": "新建工作流程檔案...",
 			"newRuleFile": "新建規則檔案..."
 		}
+	},
+	"taskTimeline": {
+		"tooltip": {
+			"clickToScroll": "查看 {{messageType}} (#{{messageNumber}})",
+			"messageTypes": {
+				"browser_action_result": "浏览器操作结果",
+				"browser_action": "浏览器操作",
+				"browser_action_launch": "浏览器启动",
+				"checkpoint_saved": "检查点已保存",
+				"command": "命令执行",
+				"completion_result": "完成结果",
+				"command_output": "命令输出",
+				"condense_context": "压缩上下文",
+				"error": "错误信息",
+				"followup": "后续问题",
+				"mcp_server_response": "MCP服务器响应",
+				"reasoning": "AI推理",
+				"text": "AI回复",
+				"tool": "工具使用",
+				"use_mcp_server": "MCP 服务器使用情况",
+				"unknown": "未知消息类型"
+			}
+		}
 	}
 }
