Integrate new marketplace

--- a/webview-ui/src/i18n/locales/vi/marketplace.json
+++ b/webview-ui/src/i18n/locales/vi/marketplace.json
@@ -1,5 +1,5 @@
 {
-	"title": "Roo Marketplace",
+	"title": "Kilo Code Marketplace",
 	"tabs": {
 		"installed": "Đã cài đặt",
 		"settings": "Cài đặt",
