--- a/webview-ui/src/i18n/locales/en/marketplace.json
+++ b/webview-ui/src/i18n/locales/en/marketplace.json
@@ -1,5 +1,5 @@
 {
-	"title": "Roo Marketplace",
+	"title": "Kilo Code Marketplace",
 	"tabs": {
 		"installed": "Installed",
 		"settings": "Settings",
