--- a/webview-ui/src/i18n/locales/hi/marketplace.json
+++ b/webview-ui/src/i18n/locales/hi/marketplace.json
@@ -1,5 +1,5 @@
 {
-	"title": "Roo Marketplace",
+	"title": "Kilo Code Marketplace",
 	"tabs": {
 		"installed": "इंस्टॉल किया गया",
 		"settings": "सेटिंग्स",
