--- a/webview-ui/src/i18n/locales/it/marketplace.json
+++ b/webview-ui/src/i18n/locales/it/marketplace.json
@@ -1,5 +1,5 @@
 {
-	"title": "Roo Marketplace",
+	"title": "Kilo Code Marketplace",
 	"tabs": {
 		"installed": "Installati",
 		"settings": "Impostazioni",
